Refactor code. Improve support closed captions.